# verus-t-rpc

./: .gitignore  Cargo.toml  Conf.mining-pool.toml  Conf.pow-example.toml  Conf.production.toml  Conf.public-dex.toml  Conf.toml  LICENSE  LICENSE-EXCEPTION  LICENSE-MIT  LICENSE-VERUS  Makefile  README.md
config/: Conf.toml  development.toml  production.toml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.verus  README.md
docker/compose/: docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.verus-test.yml  docker-compose.yml
docker/config/: Caddyfile  Caddyfile.dev  prometheus.yml  verus.conf
docker/scripts/: auto-config.ps1  auto-config.py  auto-config.sh  docker-build.ps1  docker-build.sh  docker-security.sh  verus-bootstrap.sh  wait-for-verus.sh
docs/: README.md  SECURE_DEPLOYMENT_SUMMARY.md  anonymous-dex-integration.md  getting-started.md  production-deployment.md  public-dex-integration.md
docs/api/: index.md  payments.md  request-response.md  rpc-methods.md
docs/architecture/: application-services.md  index.md  system-architecture.md
docs/deployment/: REDIS_SETUP.md  REVERSE_PROXY_DEPLOYMENT.md  docker-directory-structure.md  docker-security.md  index.md  production.md
docs/development/: DEPRECATION_CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  configuration-reference.md  index.md  setup.md  test_local_access.md
docs/integrations/: anonymous-dex-integration.md  index.md  mining-pool-integration-design.md  mining-pool-integration-guide.md  mining-pool-integration-summary.md  pow-implementation-summary.md  pow-integration-guide.md  pow-security-analysis.md  public-dex-integration.md
docs/monitoring/: index.md  metrics.md
docs/security/: WARP_SECURITY_HEADERS_IMPLEMENTATION.md  index.md  security-overview.md
examples/: dex_client_example.js  test_deployment.sh  test_secure_deployment.sh
src/: allowlist.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  rpc.rs  security.rs  server.rs  validation.rs
src/application/: mod.rs  services.rs  use_cases.rs
src/application/services/: metrics_service.rs  mod.rs  payments_service.rs  rpc_service.rs
src/application/use_cases/: health_check.rs  (+1 more)
src/config/: app_config.rs  mod.rs  validation.rs
src/domain/: health.rs  mod.rs  payments.rs  rpc.rs  security.rs  validation.rs
src/infrastructure/: converters.rs  mod.rs
src/middleware/: cache.rs  cors.rs  mod.rs  rate_limit.rs  security_headers.rs
src/shared/: error.rs  logging.rs  metrics.rs  mod.rs  validation.rs
src/tests/: mod.rs
(+61 files in other folders)
