[package]
name = "verus-t-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
warp = { version = "0.4.0", features = ["server"] }
tokio = { version = "1.47.1", features = ["full"] }

# JSON and serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
jsonrpc = "0.18.0"

# Configuration
config = "0.15.13"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Logging and observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Rate limiting
governor = "0.10.0"

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Async utilities
futures = "0.3.31"
bytes = "1.10.1"

# Cryptography and security
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["std"] }

[dev-dependencies]
tokio-test = "0.4.4"